--- a/diary/templates/diary_specific.html
+++ b/diary/templates/diary_specific.html
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row">
 
-        <div class="col-md-12" style="margin-left:0px; margin-top:0px;background-image: url(/static/bg_for_specific.jpg/);width:100%;height:max-content; background-repeat: no-repeat; background-size: cover;">
+        <div class="col-md-12" style="margin-left:0px; margin-top:0px;width:100%;height:max-content;">
 
             <div class="head" style="margin-top: 50px; display: flex; justify-content: space-between;">
                 <div>
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <br>  
-            <div class="content" style="background:rgba(56, 56, 56, 0.5); color: black; ">                
+            <div class="content" style="background:rgba(0, 0, 0, 0.2); color: black; ">                
                     <p style="font-family: sans-serif; color: black; font-size: 40px; font-weight: 800;">{{viewdiary.diarycontent|safe}}</p> 
             </div>        
             <br>
