--- a/diary/templates/logout.html
+++ b/diary/templates/logout.html
@@ -10,8 +10,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-<div style="display: flex; justify-content: center;align-items: center;height: 60vh;width: 250px; margin-top: 22vh; background-color: #040116; color: white;">
-	<b>Thank you for using</b>
+	<div style="display: flex; justify-content: space-around;">
+<div style="flex-direction: column; height: 60vh;width: 50%; margin-top: 22vh; text-align: center;padding: 80px;  background-color: #040116; color: white;">
+	<h3>You are logged out!</h3>
+	<b><p>Thank you for using WriteMyDiary</p></b>
+	 <a href="/signin/" class="btn btn-lg" style="width: 210px; border-radius: 25px;background-color:
+        #fff;color: #333; ">Login again</a>
+</div>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
