--- a/diary/templates/signup.html
+++ b/diary/templates/signup.html
@@ -8,7 +8,7 @@
 
 <div class="container" style="height: 90vh; display:flex; justify-content: center; align-items: center;">
     <br>
-    <div class="card" style="width: 25rem;background-color: #f9e2e5;">
+    <div class="card" style="width: 25rem;background-color: #E7E5E9;">
         <div class="card-body">
             <h4 class="card-title" style="color:Black Russian; text-align: center;margin-top: 1px">CREATE AN ACCOUNT TO OWN A DIARY</h4>
             <form action="/signup/" method="POST">
