--- a/diary/templates/signin.html
+++ b/diary/templates/signin.html
@@ -8,7 +8,7 @@
 
 <div class="container" style="height: 90vh; display:flex; justify-content: center; align-items: center;">
     <br>
-    <div class="card" style="width: 25rem;background-color:#f9e2e5;">
+    <div class="card" style="width: 25rem;background-color: #E7E5E9;">
         <div class="card-body">
             <h3 class="card-title" style="color: Black Russian; text-align: center;"><img src="/static/logo.jpg/" alt="" style="width: 40px; height: 40px; border-radius: 50%;margin-top: 1px;"> &nbsp;LOGIN to open your diary</h3>
             <form action="/signin/" method="POST">
