--- a/diary/templates/index.html
+++ b/diary/templates/index.html
@@ -20,7 +20,7 @@
         body {
               margin: 0;
               padding: 0;
-              font-family: 'Lato';
+              font-family: 'Open Sans';
               color: #fff;
             }
         #particles-js{
@@ -107,19 +107,18 @@
                         }
                         </script>
                    <div class="row">
-                       <div class="col-md-7"></div>
+                       <div class="col-md-6"></div>
                
-                    <div class=" col-md-5" style=" justify-content: flex-end;align-items: flex-end; flex-direction: column; margin-top: 10vh;">
-                            <div style="display: flex;color: #040116">
+                    <div class=" col-md-6" style=" justify-content: flex-end;align-items: flex-end; flex-direction: column; margin-top:5vh;">
+                              <div style="display: flex;color: #040116;margin-left: 5px">
                                 <img src="/static/logo.jpg/" alt="" style="width: 63px; height: 63px; border-radius: 50%;margin-top: 20px;">
                                 <h1 style="font-family: 'Open Sans';font-size: 65px;">WriteMyDiary</h1>
-                                </div>
-                                <br>
+                              </div>
+                                
                             <div class="tagline" style="padding: 0;margin:10px;background-color: rgba(0,0,0,0.1); flex-direction: column;border-radius: 10px;">
                                 
-                              <h2 class="heading w3-center w3-animate-right" style="transition: 5s; transition-timing-function:ease;color: #040116; text-shadow:  2px 1px #E7E5E9; "> Your personal, customizable online diary </h2>
-                              <br>
-                              <br>
+                              <h3 class="heading w3-center w3-animate-right" style="transition: 5s; transition-timing-function:ease;color: #040116; text-shadow:  2px 1px #E7E5E9; "> Your personal, customizable online diary </h3>
+                              <img src="/static/blogging.svg/" height="250px" width="250px">
                               <div style="display: flex;">
                                 
                               <a class="btn btn-lg" style="background-color: white; font-size: 20px;border-radius: 25px;" data-toggle="tooltip" data-placement="left" title="Login to your account" href="/signin/">Open my diary &nbsp;
@@ -136,7 +135,7 @@
                         </div>     
                     </div>
                     <center><a data-scroll="" href="#whydiary">
-                        <i class="fas fa-arrow-alt-circle-down fa-3x"style="color: black;margin-top: 25vh" aria-hidden="true"></i>
+                        <i class="fas fa-arrow-alt-circle-down fa-3x"style="color: black;margin-top: 7vh" aria-hidden="true"></i>
                     </a></center>
             </div>
         
@@ -177,7 +176,7 @@
                   </p>
                     </div>
                     <div class="col-md-6">
-                         <img src="https://cdn.dribbble.com/users/5026721/screenshots/10816732/media/2bbc5ffc14b75c0b8da66a4da7bd51cf.png" height="max-content" width="400px">
+                        <img src="/static/book_lover.svg/" height="max-content" width="400px">
                     </div>
                     </div>
                     
@@ -196,70 +195,8 @@
               </h1>
               </div>
             </center>
-          <!-- <div class="row" >
-              <div class="col-md-1"></div> 
-             <div class="col-md-5" style="margin-bottom: 30px;">
-                 
-                 <br>
-                 <div>
-                  <div class="" style="color: #333;">
-                      <h4 class="">1.PRIVACY🔐</h4>
-                      <p class="" style="font-size: 13px; width: 90%;">We ensure that your diary is very safe with us. Only you can access your diary with the secret pin.
-                          The problem of somebody peeping into your diary book, is resolved with us in a great way. <br>
-                          <strong>Stop worrying, start writing... </strong><i class="fas fa-pen-fancy" style="color: black;"></i>
-                      </p>
-                  </div>
-              </div>
-          </div>
-          <br>
-          <div class="col-md-6">
-              
-          </div>
-          <br>
-          <br>
-          <div class="col-md-5">
-              
-          </div>
-          <div class="col-md-7" style="margin-bottom: 30px;">
-              <div class="card" style="border:none; background:rgba(0, 0, 0, 0.3);color: white;border-radius: 90px;">
-                  <div class="card-body">
-                      <h1 class="card-title" style="text-align: center;">2.ACCESS IT ANYWHERE 💻</h1>
-                      <p class="card-text" style="font-size: larger;text-align:center;">No worries of forgetting your diary somewhere.
-                          You needn't have to carry a book wherever you go, just login to <a href="/signin/" style="color: coral;">writemydiary</a>. <br>
-                          Your work is made simpler . We will be with you whenever you need.
-                      </p>
-
-                  </div>
-              </div>
-          </div>
-          <br>
-          <br>
-          <div class="col-md-7" style="margin-bottom: 50px;">
-              <div class="card" style="border: none; background:rgba(0, 0, 0, 0.2);color: white;">
-                  <div class="card-body" >
-                      <h1 class="card-title">3.CUSTOMIZABLE 👓</h1>
-                      <p class="card-text" style="font-size: larger;">Your diary entry can be made much better with us.
-                          You can ruminate your memories by adding pictures. <br>
-                          You can make it colorful.
-                          You can star your favourite diary entries. <br>
-                          <strong> Go explore.... </strong>
-                          <br>
-                          <a href="#" class="btn btn-outline-warning btn-lg" style="width: 210px; border-radius: 25px;">Login</a>
-                          <a href="#" class="btn btn-warning btn-lg" style="width: 210px; border-radius: 25px;">Signup</a>
-                      </p>
-                  </div>
-              </div>
-          </div>
-          
-          <div class="col-md-5" >
-              
-          </div>
-
-          
-      </div>
- -->
- <br>
- <br>
+           <br>
+           <br>
         <div class="row" >
           <div class="col-md-4">
             <div class="hero-card shift-down" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; ">
@@ -295,7 +232,7 @@
       </div>
       <br><br>
       <center>
-        <h1 style="color: #333;">Then why wait buddy?</h1>
+        <h1 style="color: #333; font-weight: 500;">Then why wait buddy?</h1>
         <a href="/signup/" class="btn btn-lg" style="width: 210px; border-radius: 25px;background-color:
         #040116;color: #fff; ">Get Started</a>
       </center>
@@ -304,7 +241,7 @@
 
 </section>
 <footer>
-    <div style="background-color: #555;color: white; height: 220px;">
+    <div style="background-color: #696969;color: white; height: 220px;">
         <div class="container" style=" display: flex; justify-content: space-between;">
         <div style="display:flex;">
             <img src="/static/logo.jpg/" alt="" style="width: 60px; height: 60px; border-radius: 50%;">
