--- a/diary/templates/contactus.html
+++ b/diary/templates/contactus.html
@@ -21,8 +21,8 @@
                         <!-- <div class="container"> -->
                             <div>
                                 <div style="display: flex;color: #040116;">
-                                <img src="/static/logo.jpg/" alt="" style="width: 60px; height: 60px; border-radius: 50%;">
-                                <h2 style="font-family: Open Sans;font-size: 45px;">WriteMyDiary</h2>
+                                <img src="/static/logo.jpg/" alt="" style="width: 50px; height: 50px; border-radius: 50%;">
+                                <h2 style="font-family: Open Sans;margin-top: 8px;">WriteMyDiary</h2>
                                 </div>                                
                             </div>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,10 +52,10 @@
                                          </p>
                                     </div>
                               </div>
-                    		<div class="col-md-6 mt-5">
+                    		<div class="col-md-5 mt-5">
                     			<center><h1>GET IN TOUCH....</h1></center>
                     			<br>
-                    			<div class="icons" style="   display: flex;justify-content: space-between;margin-top: 20px;flex-wrap: wrap;">
+                    			<div class="icons" style="display: flex;justify-content: space-between;margin-top: 20px;flex-wrap: wrap;">
                     				<div>
                     					<a href="https://www.instagram.com/srivalli_1526/"><i class="fab fa-instagram fa-5x"></i>
                     					<br>
@@ -81,7 +81,7 @@
                     				</div>
                     			</div>
                     		</div>
-                    	
+                    	<div class="col-md-1"></div>
                     	</div>
                     </div>
                     <br>
