--- a/diary/templates/dash_base.html
+++ b/diary/templates/dash_base.html
@@ -53,11 +53,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
+                  <a class="nav-item nav-link active" style="color: #fff; margin-top: 3px" href="/dashboard"><i class="fas fa-home"></i> &nbsp;Home | </a>
                     {% if not user.is_authenticated  %}
-                    <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+                    
                     <a class="nav-item nav-link nav-style" data-scroll="" href="/signup/">Signup <i class="fas fa-user-plus"></i></a>
-                    <a class="nav-item nav-link nav-style" data-scroll="" href="/signin/">Login <i class="fas fa-user-circle"></i></i></a>
+                    <a class="nav-item nav-link nav-style" data-scroll="" href="/signin/">Login <i class="fas fa-user-circle"></i></a>
                     {% else %}
+
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:#fff;font-size: 20px">
                           {{user.username}}
@@ -81,11 +83,11 @@
     <div class="col-md-2" style="background-color: white; height: 700vh;">
         <br>
         <nav class="pill-nav">
-          <h4 style="color:#040116;text-align: center;">{{owner.diaryname}}<i class="fa fa-book-open"></i></h4>
+          <h3 style="color:#040116;text-align: center;font-weight: 600">{{owner.diaryname}}<i class="fa fa-book-open"></i></h3>
           <br>
-          <a class="active" href="/dashboard/">All diary entries</a>
-          <a href="/create/">New diary</a>
-          <a href="/fav-diaries/">Your starred entries</a>
+          <a class="active" href="/dashboard/" style="flex-direction: row;"><i class="fas fa-layer-group"></i> &nbsp;All entries</a>
+          <a href="/create/" style="flex-direction: row;"><i class="fas fa-plus-circle"></i> &nbsp;New Entry</a>
+          <a href="/fav-diaries/" style="flex-direction: row;"><i class="fas fa-star"></i>Starred entries</a>
         </nav>
     </div>
     <div class="col-md-9">
