--- a/diary/templates/dashboard.html
+++ b/diary/templates/dashboard.html
@@ -1,16 +1,17 @@
 {% extends 'dash_base.html' %}
 {% block head %}
     <link rel="icon" href="/static/logo.jpg/" />
-    <title>WriteMyDiary| Your personal online diary</title>
+    <title>WriteMyDiary  | Your personal online diary</title>
 {% endblock %}
 
 {% block body %}
 <br>
 <div style="display: flex;justify-content: space-between;">
-<h2>Hi {{user.username}}, here's all your diary entries...</h2>
-<a href="/create/" class="btn btn-primary" style="text-align: center;"><i class="fas fa-plus-circle"></i> &nbsp;New Entry</a>
+<h3>Hi {{user.username}}, here's all your diary entries...</h3>
+<a href="/create/" class="btn btn-primary btn-sm" style="text-align: center;height: 30px;"><i class="fas fa-plus-circle"></i> &nbsp;New Entry</a>
 </div>
 <br>
+<hr>
 <br>
 {% if all_diaries.count == 0 %}
 <div style="color: white; position:absolute; left: 30%;top: 50%;">
@@ -22,7 +23,8 @@
 {% for d in all_diaries %}
 <div style="display: flex;justify-content: space-around;"> 
 	<div class="card " style=" margin-bottom: 15px; width: 70%;">
-  <div class="card-header" style="display: flex; justify-content: space-between;background-color: #040116; color: white;">
+  <!-- <div class="card-header" style="display: flex; justify-content: space-between;background-color: #040116; color: white;"> -->
+    <div class="card-header" style="display: flex; justify-content: space-between;background-color: #E7E5E9; color: black;">
     <div>
      <h4 style="text-align: left;">{{d.highlight}}</h4>
     </div>
@@ -42,10 +44,16 @@
   </div>
   </div>
   <div class="card-body" style="background-color:#fff;color: #333;">
-    <h6 class="card-title" style="float: right;">{{d.timestamp | timesince}} ago</h6>
-    <p class="card-text">{{d.diarycontent|safe}}</p>
+    <div style="display: flex;justify-content: space-between;">
+      <div>
+        <p class="card-title">{{d.diarycontent | safe | truncatechars:15}}</p>
+      </div>
+      <div>
+        <h6 class="card-title" style="float: right;">{{d.timestamp | timesince}} ago</h6>
+      </div>
+    </div>
     <a href="/diary/{{d.id}}/" class="btn btn-primary" style="border-radius: 25px;">Recall the day</a>
-    <a class="btn btn-outline-danger" style="text-align: center;float: right;background-color: white;color: red" href="/deleteDiary/{{d.id}}/"> <i class="far fa-trash-alt"></i> </a>
+    <a style="text-align: center;float: right;background-color: white;color: red;padding: 10px;" href="/deleteDiary/{{d.id}}/"> <i class="far fa-trash-alt"></i> </a>
   </div>
 </div>
 </div>
