--- a/diary/templates/diary_specific.html
+++ b/diary/templates/diary_specific.html
@@ -13,17 +13,16 @@
 
             <div class="head" style="margin-top: 50px; display: flex; justify-content: space-between;">
                 <div>
-                    <h3>Highlight of the day:</h3>
-                    <b><h2>{{viewdiary.highlight}}</h2></b>
+                    <h3>Highlight of the day: <span style="font-weight: 550">{{viewdiary.highlight}}</span> </h3>
                 </div>
                 <div>                   
                     <p>{{viewdiary.timestamp}}</p>
-                    <a href="/edit/{{viewdiary.id}}/" class="btn btn-dark" style="border-radius: 25px; text-align: center;display: inline;"><i class="fas fa-edit"></i></a>
-                    <a class="btn btn-outline-danger" style="text-align: center;display: inline;" href="/deleteDiary/{{viewdiary.id}}/"><i class="far fa-trash-alt"></i></a>
+                    <a href="/edit/{{viewdiary.id}}/" style="border-radius: 25px; text-align: center;"><i class="fas fa-edit" style="color: #333;padding: 10px;font-size: 20px;"></i></a>
+                    <a  style="text-align: center;color: red;font-size: 20px;" href="/deleteDiary/{{viewdiary.id}}/"><i class="far fa-trash-alt"></i></a>
                 </div>
             </div>
             <br>  
-            <div class="content" style="background:rgba(0, 0, 0, 0.2); color: black; ">                
+            <div class="content" style="background:rgba(0, 0, 0, 0.1); color: black; ">                
                     <p style="font-family: sans-serif; color: black; font-size: 40px; font-weight: 800;">{{viewdiary.diarycontent|safe}}</p> 
             </div>        
             <br>
