--- a/diary/templates/faq.html
+++ b/diary/templates/faq.html
@@ -19,8 +19,8 @@
                         <!-- <div class="container"> -->
                             <div>
                                 <div style="display: flex;color: #040116;">
-                                <img src="/static/logo.jpg/" alt="" style="width: 60px; height: 60px; border-radius: 50%;">
-                                <h2 style="font-family: Open Sans;font-size: 45px;">WriteMyDiary</h2>
+                                <img src="/static/logo.jpg/" alt="" style="width: 50px; height: 50px; border-radius: 50%;">
+                                <h2 style="font-family: Open Sans;margin-top: 8px;">WriteMyDiary</h2>
                                 </div>                                
                             </div>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
