about page changes

--- a/diary/templates/contactus.html
+++ b/diary/templates/contactus.html
@@ -45,13 +45,14 @@
                                     <div>
                                         <b><p>Full Stack Web Developer</p></b>
                                     </div>
-                                    </center>
-                                    <div style="margin-left: 50px; width: 80%">
-                                        <p>I am a 20 year old, tech-girl,who currently lives in Bangalore, India. I am currently studying Information Science and Engineering. <br> I am experienced in designing websites, I proudly call myself as a full stack web developer.
-                                            <br> I believe that "you learn something at every second of your life".
+                                    
+                                    <div style="text-align: center; width: 60%">
+                                        <p>I am currently residing in Bangalore, India. Information Science and Engineering in making. <br> I enjoy designing websites.
+                                        I believe that "I learn something at every second in my life".
 
                                          </p>
                                     </div>
+                                </center>
                               </div>
                     		<div class="col-md-5 mt-5">
                     			<center><h1>GET IN TOUCH....</h1></center>
