--- a/diary/templates/index.html
+++ b/diary/templates/index.html
@@ -159,18 +159,18 @@
                     <h3 class="card-title" style="font-weight: bold;">Why is diary writing important? 📌</h3>
                     </div>
                   <p class="card-text" style="font-size: 15px;">
-                    It's really appreciable if one could record his thoughts and feelings somewhere.
-                       Diary gives you that opportunity. Writing diary provides some sense of relief,
+                    It's really appreciable if people could record their thoughts and feelings somewhere.
+                       Diary gives us that opportunity. Writing diary provides some sense of relief,
                         get you more clarity about yourself and your life. <br> <br>
 
                         Make diary writing as your habit and
-                        before you realise you would have increased your writing skills too...
-                        It heals your mind and keeps you focused. It's a therapy for bad days. <br><br>
+                        before you realise you would have increased your writing skills too.
+                        It heals your mind and keep you focused. It's a therapy for bad days. <br><br>
                         Studies have shown that the emotional release that comes from writing a diary helps to lower anxiety and stress,
                         and even helps you achieve a better night’s sleep. 
                         
                         <br>
-                        They say "there is no better friend than your diary". 🤝
+                        There is a saying that, "there is no better friend than your diary". 🤝
                         <br>
                         So start writing diary with us.
                         <br><br><br>
