--- a/diary/templates/index.html
+++ b/diary/templates/index.html
@@ -111,9 +111,9 @@
                        <div class="col-md-6"></div>
                
                     <div class=" col-md-6" style=" justify-content: flex-end;align-items: flex-end; flex-direction: column; margin-top:5vh;">
-                              <div style="display: flex;color: #040116;margin-left: 5px">
-                                <img src="{% static 'logo.jpg' %}" alt="" style="width: 63px; height: 63px; border-radius: 50%;margin-top: 20px;">
-                                <h1 style="font-family: 'Open Sans';font-size: 65px;">WriteMyDiary</h1>
+                              <div style="display: flex;color: #040116;margin-left: 0">
+                                <img src="{% static 'logo.jpg' %}" alt="" style="width: 63px; height: 63px; border-radius: 50%;margin-top: 10px;">
+                                <h1 style="font-family: 'Open Sans';font-weight: 900;font-size: 3.5em;">WriteMyDiary</h1>
                               </div>
                                 
                             <div class="tagline" style="padding: 0;margin:10px;background-color: rgba(0,0,0,0.1); flex-direction: column;border-radius: 10px;">
@@ -136,7 +136,7 @@
                         </div>     
                     </div>
                     <center><a data-scroll="" href="#whydiary">
-                        <i class="fas fa-arrow-alt-circle-down fa-3x"style="color: black;margin-top: 8vh" aria-hidden="true"></i>
+                        <i class="fas fa-arrow-alt-circle-down fa-3x"style="color: black;margin-top: 9vh" aria-hidden="true"></i>
                     </a></center>
             </div>
         
@@ -252,7 +252,7 @@
         
         <div>
             <!-- <ul  style="list-style:none;"> -->
-                <p style="font-size: 20px;text-align: center;">WriteMyDiary</p>
+                <h4 style="text-align: center;">WriteMyDiary</h4>
                 <hr>
                 <ul class="ul-style" style="text-align: left;list-style:none;">
                 <a href="/faq/"><li>FAQ</li></a>
@@ -274,6 +274,7 @@
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
 <script type="text/javascript" src="/static/js/particles.min.js/"></script>
 <script type="text/javascript" src="/static/js/app.js/"></script>
 <script type="text/javascript" src="/static/js/main.js/"></script>
