image size changes

--- a/diary/templates/index.html
+++ b/diary/templates/index.html
@@ -177,7 +177,7 @@
                   </p>
                     </div>
                     <div class="col-md-6">
-                        <img src="{% static 'book_lover.svg' %}" height="max-content" width="400px">
+                        <img src="{% static 'book_lover.svg' %}" height="max-content" width=" 90%">
                     </div>
                     </div>
                     
