post button changes

--- a/diary/templates/create_diary.html
+++ b/diary/templates/create_diary.html
@@ -94,7 +94,7 @@
               <textarea name="diarycontent" id="summernote"></textarea>
             </div>
             <br>
-            <input type="submit" class="btn btn-lg" value="Post" style="width:180px; background-color:#040116;color: white; margin-left: 600px;">
+            <input type="submit" class="btn btn-lg" value="Post" style="width:180px; background-color:#040116;color: white; float: right;">
             
           </form>
           
