resolved nav height

--- a/diary/templates/contactus.html
+++ b/diary/templates/contactus.html
@@ -47,7 +47,7 @@
                                     </div>
                                     
                                     <div style="text-align: center; width: 60%">
-                                        <p>I am currently residing in Bangalore, India. Information Science and Engineering in making. <br> I enjoy designing websites.
+                                        <p>Resident of Bangalore, India. Information Science and Engineering in making. <br> I enjoy designing websites.
                                         I believe that "I learn something at every second in my life".
 
                                          </p>
