--- a/diary/templates/dash_base.html
+++ b/diary/templates/dash_base.html
@@ -81,7 +81,7 @@
         <!-- side- nav -->
 
 <div class="row">
-    <div class="col-md-2" style="background-color: white; height: 700vh;">
+    <div class="col-md-2" style="background-color: white; ">
         <br>
         <nav class="pill-nav">
           <h3 style="color:#040116;text-align: center;font-weight: 600">{{owner.diaryname}}<i class="fa fa-book-open"></i></h3>
