--- a/diary/templates/create_diary.html
+++ b/diary/templates/create_diary.html
@@ -61,8 +61,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" style="color:#fff; " href="/dashboard/">Dashboard</a>
-            <a class="nav-item nav-link" style="color:#fff; " href="/signout/">Logout</a>
+            <a class="nav-item nav-link" style="color:#fff; " href="/dashboard/"><i class="fas fa-home"></i> &nbsp;Home</a>
+            <a class="nav-item nav-link" style="color:#fff; " href="/signout/">Logout <i class="fas fa-sign-out-alt"></i></a>
           </div>
        </div>
 </nav>
