--- a/diary/templates/faq.html
+++ b/diary/templates/faq.html
@@ -44,16 +44,16 @@
 				<li class="a">Just ping us at the email - 'hellowritemydiary@gmail.com' . We will reach you out within 24 working hours.</li>
 				
 				<li class="q"><i class="fas fa-caret-right"></i>&nbsp;Where to give feedback?</li>
-				<li class="a">Open <a href="/writemydiary/feedback-section/">writemydiary/feedback-section</a> and rate us there, give your honest comments. Thank you.</li>
+				<li class="a">Open <a href="/writemydiary/feedback/">writemydiary/feedback/</a> and rate us there, give your honest comments. Thank you.</li>
 				
 				<li class="q"><i class="fas fa-caret-right"></i>&nbsp;I am not able to add my diary to memories.</li>
 				<li class="a">Either the server would have been working slow,or you might have poor connection, please kindly wait, or try after sometime. If still, it persists then contact us at our email-id.</li>
 				
 				<li class="q"><i class="fas fa-caret-right"></i>&nbsp; Create diary feature isn't working.</li>
-				<li class="a">Summernote wouldn't have loaded, no worries! Refresh the page twice, it will work. </li>
+				<li class="a">Summernote editor wouldn't have loaded, no worries! Refresh the page twice, it will work. </li>
 				
 				<li class="q"><i class="fas fa-caret-right"></i>&nbsp; Images aren't loading.</li>
-				<li class="a">Sorry for the inconvinience, give sometime it will work. Try reloading the page and adding it again.</li>
+				<li class="a">Sorry for the inconvinience, give sometime it will work. Try reloading the page or adding it again.</li>
 			</ul>
 		</div>
 		<!-- </div> -->
