--- a/diary/templates/dash_base.html
+++ b/diary/templates/dash_base.html
@@ -35,7 +35,7 @@
                         }
        .pill-nav a.active{
           background-color: #040116;
-                          color: white;
+          color: white;
         }
         .pill-nav a{
           margin-bottom: 10px;
@@ -84,7 +84,7 @@
     <div class="col-md-2" style="background-color: white; ">
         <br>
         <nav class="pill-nav">
-          <h3 style="color:#040116;text-align: center;font-weight: 600">{{owner.diaryname}}<i class="fa fa-book-open"></i></h3>
+          <h3 style="color:#040116;text-align: center;font-weight: 600;">{{owner.diaryname}}<i class="fa fa-book-open"></i></h3>
           <br>
           <a class="active" href="/dashboard/" style="flex-direction: row;"><i class="fas fa-layer-group"></i> &nbsp;All entries</a>
           <a href="/create/" style="flex-direction: row;"><i class="fas fa-plus-circle"></i> &nbsp;New Entry</a>
