--- a/diary/templates/dashboard.html
+++ b/diary/templates/dashboard.html
@@ -8,7 +8,7 @@
 
 {% block body %}
 <br>
-<div style="display: flex;justify-content: space-between;">
+<div style="display: flex;justify-content: space-between;margin-left: 10px">
 <h3>Hi {{user.username}}, here's all your diary entries...</h3>
 <a href="/create/" class="btn btn-primary btn-sm" style="text-align: center;height: 30px;"><i class="fas fa-plus-circle"></i> &nbsp;New Entry</a>
 </div>
