--- a/diary/templates/edit_diary.html
+++ b/diary/templates/edit_diary.html
@@ -51,7 +51,7 @@
 </head>
 <body>
    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #040116;">
-                        
+    <div class="container">
     <div>
     <div style="display: flex;color: #fff;">
     <img src="/static/logo.jpg/" alt="" style="width: 60px; height: 60px; border-radius: 50%;">
@@ -63,7 +63,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" style="color:#fff; " href="/dashboard/">Dashboard</a>
+            <a class="nav-item nav-link" style="color:#fff; " href="/dashboard/"><i class="fas fa-home"></i> &nbsp;Home</a>
             <a class="nav-item nav-link" style="color:#fff; " href="/signout/">Logout <i class="fas fa-sign-out-alt"></i></a>
           </div>
        </div>
@@ -100,7 +100,7 @@
       </div>
     
   </div>
-
+</div>
   <script>
     $(document).ready(function() {
         $('#summernote').summernote({
